--- a/src/assets/css/classes.scss
+++ b/src/assets/css/classes.scss
@@ -137,7 +137,6 @@
     padding-bottom: 20px !important;
 
     button:last-of-type {
-      margin: 0 10px;
     }
 }
 
